--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "monzuara-fashion-store",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "lucide-react": "^0.469.0",
-    "next": "15.1.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.2",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+ "name": "monzuara-fashion-store",
+ "version": "0.1.0",
+ "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start"
+ },
+ "dependencies": {
+  "@fontsource/newsreader": "^5.1.1",
+  "eslint-config-next": "15.1.2",
+  "lucide-react": "^0.471.0",
+  "next": "^15.1.4",
+  "react": "^18.0.0",
+  "react-dom": "^18.0.0",
+  "react-icons": "^5.4.0"
+ },
+ "devDependencies": {
+  "@eslint/eslintrc": "^3",
+  "autoprefixer": "^10.4.20",
+  "eslint": "^9",
+  "eslint-config-next": "15.1.2",
+  "postcss": "^8.4.49",
+  "tailwindcss": "^3.4.17"
+ }
 }
